Minor CMake fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,20 +203,9 @@ if(CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 endif()
 
-if(CMAKE_COMPILER_IS_GNUCXX)
-    set(CMAKE_CXX_FLAGS "-DDEFINED_VERSION=\"${CLIENT_VERSION}\" ${CMAKE_CXX_FLAGS}")
-else()
-    set(CMAKE_CXX_FLAGS "/DDEFINED_VERSION=\"${CLIENT_VERSION}\" ${CMAKE_CXX_FLAGS}")
-endif()
+add_definitions(-DDEFINED_VERSION=${CLIENT_VERSION})
 
 #SET(CMAKE_EXE_LINKER_FLAGS "/DEBUG")
-
-# Executable suffix helper
-if(WIN32)
-    set(EXECUTABLE_SUFFIX ".exe")
-else()
-    set(EXECUTABLE_SUFFIX "")
-endif()
 
 ###
 ### Global compiler glags have been setted
@@ -380,11 +369,11 @@ file(GLOB_RECURSE GOFILES "${SERVER_DIR}/*.go")
 
 
 add_custom_command(
-    OUTPUT ${SERVER_DIR}/griefly-server${EXECUTABLE_SUFFIX}
+    OUTPUT ${SERVER_DIR}/griefly-server${CMAKE_EXECUTABLE_SUFFIX}
     WORKING_DIRECTORY ${SERVER_DIR}
     COMMAND ${CMAKE_COMMAND} -E env GOPATH=${GOPATH} GO15VENDOREXPERIMENT=1 ${GO_EXECUTABLE} build -ldflags "-X main.clientVersionBuild=${CLIENT_VERSION}"
     DEPENDS ${GOFILES})
-add_custom_target(GoServer ALL DEPENDS ${SERVER_DIR}/griefly-server${EXECUTABLE_SUFFIX})
+add_custom_target(GoServer ALL DEPENDS ${SERVER_DIR}/griefly-server${CMAKE_EXECUTABLE_SUFFIX})
 
 ###
 ### End building server
