--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,15 @@ before_install:
   - export CXX="g++-4.9"
 install:
   - eval "$(gimme 1.6)"
-  - make travis-get-deps
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository -y ppa:george-edison55/cmake-3.x
+  - sudo apt-get update -qq
+  - sudo apt-get install -y g++-4.9
+  - sudo apt-get install -y libsfml-dev
+  - sudo apt-get install -y zlib1g-dev libpng-dev lcov
+  - sudo apt-get install -y qtbase5-dev
+  - sudo apt-get install -y cmake
+  - gem install coveralls-lcov
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
