--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,7 +250,7 @@ list(APPEND SOURCES "${CMAKE_BINARY_DIR}/AutogenMetadata.cpp")
 # Version.cpp generation
 add_custom_command(
     OUTPUT Version.${CLIENT_VERSION}.cpp
-    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/version.py ${CLIENT_VERSION}
+    COMMAND rm -f Version.*.cpp && ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/version.py ${CLIENT_VERSION}
 )
 add_custom_target(Version ALL DEPENDS Version.${CLIENT_VERSION}.cpp)
 
@@ -274,13 +274,6 @@ qt5_use_modules(KVEngine Core)
 qt5_use_modules(KVEngine Network)
 qt5_use_modules(KVEngine Widgets)
 qt5_use_modules(KVEngine OpenGL)
-
-# Add version define
-# set_property(
-#    SOURCE "${SOURCE_DIR}Version.cpp"
-#    APPEND
-#    PROPERTY COMPILE_DEFINITIONS
-#    DEFINED_VERSION=${CLIENT_VERSION})
 
 # Add GTEST lib
 if(BUILD_TESTS)
