--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,6 +189,12 @@ if(NOT CLIENT_VERSION)
 endif()
 message(STATUS ${CLIENT_VERSION})
 
+# Version.cpp generation
+execute_process(
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/version.py ${CLIENT_VERSION}
+)
+
 ###
 ### End checking build version
 ##########################################
@@ -246,15 +252,7 @@ add_custom_command(
 add_custom_target(Metadata ALL DEPENDS AutogenMetadata.cpp)
 
 list(APPEND SOURCES "${CMAKE_BINARY_DIR}/AutogenMetadata.cpp")
-
-# Version.cpp generation
-add_custom_command(
-    OUTPUT Version.${CLIENT_VERSION}.cpp
-    COMMAND rm -f Version.*.cpp && ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/version.py ${CLIENT_VERSION}
-)
-add_custom_target(Version ALL DEPENDS Version.${CLIENT_VERSION}.cpp)
-
-list(APPEND SOURCES "${CMAKE_BINARY_DIR}/Version.${CLIENT_VERSION}.cpp")
+list(APPEND SOURCES "${CMAKE_BINARY_DIR}/Version.cpp")
 
 qt5_wrap_ui(FORMS_HEADERS ${FORMS})
 
