--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - sudo apt-get install -y g++-4.9
   - sudo apt-get install -y qtbase5-dev
   - sudo apt-get install -y qtmultimedia5-dev
+  - sudo apt-get install -y lcov
   - gem install coveralls-lcov
 before_script:
   - "export DISPLAY=:99.0"
