--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,5 +24,5 @@ test_script:
   - cmd: KVEngine.exe --run-tests
 
 artifacts:
-  - path: %KVVERSION%
-    name: %KVVERSION%
+  - path: '%KVVERSION%'
+    name: '%KVVERSION%'
