QT5DIR is used in windeployqt #351

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ build_script:
   - cmd: cmake --build . --target install --config Release -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 
 after_build:
-  - cmd: C:\Qt\5.8\msvc2015_64\bin\windeployqt.exe Exec/KVEngine.exe
+  - cmd: '%QT5DIR%\msvc2015_64\bin\windeployqt.exe Exec/KVEngine.exe'
   - cmd: for /f "tokens=* USEBACKQ" %%F in (`git describe --tags --abbrev^=4`) do set KVVERSION=%%F
   - cmd: set KVVERSION=Griefly-%KVVERSION%-win64
   - cmd: echo %KVVERSION%
