--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ before_install:
 install:
   - eval "$(gimme 1.6)"
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository ppa:beineri/opt-qt58-trusty
   - sudo apt-get update -qq
   - sudo apt-get install -y g++-4.9
-  - sudo apt-get install -y qtbase5-dev
-  - sudo apt-get install -y qtmultimedia5-dev
+  - sudo apt-get install -y qt58base
+  - sudo apt-get install -y qt58multimedia
   - sudo apt-get install -y lcov
   - gem install coveralls-lcov
 before_script:
