--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 install:
   - eval "$(gimme 1.6)"
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo add-apt-repository ppa:beineri/opt-qt58-trusty
+  - sudo add-apt-repository -y ppa:beineri/opt-qt58-trusty
   - sudo apt-get update -qq
   - sudo apt-get install -y g++-4.9
   - sudo apt-get install -y qt58base
