--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - sudo apt-get install -y qt58multimedia
   - sudo apt-get install -y lcov
   - gem install coveralls-lcov
+  - sudo /opt/qt58/bin/qt58-env.sh
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
