c++11 standart is set with special CMake variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.1)
 project(KVEngineQt)
 
 option(BUILD_TESTS "Build tests" OFF)
@@ -184,8 +184,9 @@ endif()
 ### Some global compiler flags & other stuff
 ###
 
+set(CMAKE_CXX_STANDARD 11)
 if(CMAKE_COMPILER_IS_GNUCXX)
-    set(CMAKE_CXX_FLAGS "-std=c++11 -Wold-style-cast ${CMAKE_CXX_FLAGS}")
+    set(CMAKE_CXX_FLAGS "-Wold-style-cast ${CMAKE_CXX_FLAGS}")
 endif()
 
 #SET(CMAKE_EXE_LINKER_FLAGS "/DEBUG")
