--- a/.travis.yml
+++ b/.travis.yml
@@ -34,12 +34,8 @@ install:
     eval "$(gimme 1.6)";
     brew install qt;
     brew info qt;
-    brew install lcov;
-    gem install coveralls-lcov;
     export CMAKE_PREFIX_PATH=/opt/qt58/;
     export PATH="/usr/local/opt/qt/bin:$PATH";
-    export PATH="/usr/local/Cellar/gcc@4.9/4.9.3/bin:$PATH";
-    sudo ln -s /usr/local/Cellar/gcc@4.9/4.9.3/bin/gcov-4.9 /usr/local/Cellar/gcc@4.9/4.9.3/bin/gcov;
     export LDFLAGS="-L/usr/local/opt/qt/lib";
     export CPPFLAGS="-I/usr/local/opt/qt/include";
     fi
@@ -58,11 +54,13 @@ script:
   - ./KVEngine --run-tests
   
 after_success:
-  - cd ${TRAVIS_BUILD_DIR}
-  - lcov -c -d . -o coverage.info
-  - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system code
-  - lcov --remove coverage.info '/opt/*' --output-file coverage.info # filter out qt files
-  - lcov --remove coverage.info '*/tests/*' --output-file coverage.info # remove tests from coverage
-  - lcov --remove coverage.info '*/build/*' --output-file coverage.info # remove gtest and generated code from coverage
-  - lcov --list coverage.info # debug before upload
-  - coveralls-lcov --repo-token=${COVERALLS_TOKEN} coverage.info # uploads to cov
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+    cd ${TRAVIS_BUILD_DIR}
+    lcov -c -d . -o coverage.info
+    lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system code
+    lcov --remove coverage.info '/opt/*' --output-file coverage.info # filter out qt files
+    lcov --remove coverage.info 'tests/*' --output-file coverage.info # remove tests from coverage
+    lcov --remove coverage.info '/griefly/build/*' --output-file coverage.info # remove gtest and generated code from coverage
+    lcov --list coverage.info # debug before upload
+    coveralls-lcov --repo-token=${COVERALLS_TOKEN} coverage.info # uploads to cov
+    fi
