--- a/.travis.yml
+++ b/.travis.yml
@@ -55,12 +55,12 @@ script:
   
 after_success:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-    cd ${TRAVIS_BUILD_DIR}
-    lcov -c -d . -o coverage.info
-    lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system code
-    lcov --remove coverage.info '/opt/*' --output-file coverage.info # filter out qt files
-    lcov --remove coverage.info 'tests/*' --output-file coverage.info # remove tests from coverage
-    lcov --remove coverage.info '/griefly/build/*' --output-file coverage.info # remove gtest and generated code from coverage
-    lcov --list coverage.info # debug before upload
-    coveralls-lcov --repo-token=${COVERALLS_TOKEN} coverage.info # uploads to cov
+    cd ${TRAVIS_BUILD_DIR};
+    lcov -c -d . -o coverage.info;
+    lcov --remove coverage.info '/usr/*' --output-file coverage.info; # filter out system code
+    lcov --remove coverage.info '/opt/*' --output-file coverage.info; # filter out qt files
+    lcov --remove coverage.info 'tests/*' --output-file coverage.info; # remove tests from coverage
+    lcov --remove coverage.info '/griefly/build/*' --output-file coverage.info; # remove gtest and generated code from coverage
+    lcov --list coverage.info; # debug before upload
+    coveralls-lcov --repo-token=${COVERALLS_TOKEN} coverage.info; # uploads to cov
     fi
