--- a/.travis.yml
+++ b/.travis.yml
@@ -54,13 +54,17 @@ script:
   - ./KVEngine --run-tests
   
 after_success:
+    # /usr/* - filter out system code
+    # /opt/* - filter out qt files
+    # tests/* - remove tests from coverage
+    # /griefly/build/ - remove gtest and generated code from coverage
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     cd ${TRAVIS_BUILD_DIR};
     lcov -c -d . -o coverage.info;
-    lcov --remove coverage.info '/usr/*' --output-file coverage.info; # filter out system code
-    lcov --remove coverage.info '/opt/*' --output-file coverage.info; # filter out qt files
-    lcov --remove coverage.info 'tests/*' --output-file coverage.info; # remove tests from coverage
-    lcov --remove coverage.info '/griefly/build/*' --output-file coverage.info; # remove gtest and generated code from coverage
-    lcov --list coverage.info; # debug before upload
-    coveralls-lcov --repo-token=${COVERALLS_TOKEN} coverage.info; # uploads to cov
+    lcov --remove coverage.info '/usr/*' --output-file coverage.info;
+    lcov --remove coverage.info '/opt/*' --output-file coverage.info;
+    lcov --remove coverage.info 'tests/*' --output-file coverage.info;
+    lcov --remove coverage.info '/griefly/build/*' --output-file coverage.info;
+    lcov --list coverage.info;
+    coveralls-lcov --repo-token=${COVERALLS_TOKEN} coverage.info;
     fi
