Refactor all python utils, update minimum required python version from 2.7 to 3.5, closes #425 (#1)

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
     sudo apt-get install -y lcov;
     sudo apt-get install -y mesa-common-dev;
     sudo apt-get install -y libglu1-mesa-dev;
+    sudo apt-get install -y python3.5
     gem install coveralls-lcov;
     sudo /opt/qt58/bin/qt58-env.sh;
     export CMAKE_PREFIX_PATH=/opt/qt58/;
@@ -35,6 +36,7 @@ install:
     brew install gimme;
     eval "$(gimme 1.6)";
     brew install qt;
+    brew install python3;
     brew info qt;
     export CMAKE_PREFIX_PATH=/opt/qt58/;
     export PATH="/usr/local/opt/qt/bin:$PATH";
