Finally fix appveyor config (#2)
* Fix null-terminating char for python version script on windows.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ image: Visual Studio 2015
 
 environment:
   QT5DIR: C:\Qt\5.8
-  PYTHON: "C:\Python35"
+  PYTHON: C:\Python35
 
 install:
   - cmd: set CMAKE_PREFIX_PATH=%QT5DIR%\msvc2015_64
@@ -11,7 +11,7 @@ install:
   - cmd: set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
 
 build_script:
-  - cmd: cmake -G "Visual Studio 14 2015 Win64"  -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=On
+  - cmd: cmake -G "Visual Studio 14 2015 Win64"  -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=On -DPYTHON_ROOT_DIR=%PYTHON%
   - cmd: cmake --build . --target install --config Release -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 
 after_build:
