--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
     sudo apt-get install -y lcov;
     sudo apt-get install -y mesa-common-dev;
     sudo apt-get install -y libglu1-mesa-dev;
-    sudo apt-get install -y python3.5
+    sudo apt-get install -y python3;
     gem install coveralls-lcov;
     sudo /opt/qt58/bin/qt58-env.sh;
     export CMAKE_PREFIX_PATH=/opt/qt58/;
