--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - export CXX="g++-4.9"
   # work around https://github.com/travis-ci/travis-ci/issues/8363
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-    pyenv global system 3.5
+    pyenv global system 3.5;
     fi
   
 install:
