--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     eval "$(gimme 1.6)";
     sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
-    sudo add-apt-repository -y ppa:beineri/opt-qt59-trusty;
+    sudo add-apt-repository -y ppa:beineri/opt-qt591-trusty;
     sudo apt-get update -qq;
     sudo apt-get install -y g++-4.9;
     sudo apt-get install -y qt59base;
