--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -328,7 +328,7 @@ include_directories("qzip_unpacker")
 
 file(GLOB_RECURSE UNPACKER_SOURCES "${UNPACKER_DIR}*.cpp")
 list(APPEND UNPACKER_SOURCES "${SOURCE_DIR}/core_headers/FastSerializer.h")
-list(APPEND UNPACKER_SOURCES "${SOURCE_DIR}/core_headers/KvAbort.cpp" "${SOURCE_DIR}/core_headers/KvAbort.h")
+list(APPEND UNPACKER_SOURCES "${SOURCE_DIR}/core_headers/KvAbort.h")
 
 add_executable(Unpacker ${UNPACKER_SOURCES})
 
