--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,10 @@ language: cpp
 compiler: gcc
 
 before_install:
-  - export CXX="g++-5"
+  - export CXX="g++-4.9"
   # work around https://github.com/travis-ci/travis-ci/issues/8363
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+    export CXX="g++-5";
     pyenv global system 3.5;
     fi
   
