Google test downloading has been moved to separate cmake file & some minor cmake file improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,7 @@ include(ClangFormat)
 #
 ###########################
 find_package(Git REQUIRED)
-if(GIT_FOUND)
-    message(STATUS "Git has been found, ${GIT_VERSION_STRING}")
-endif()
+message(STATUS "Git has been found, ${GIT_VERSION_STRING}")
 
 ###########################
 #
@@ -60,9 +58,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 #
 ###########################
 find_package(Go 1.5 REQUIRED)
-if(GO_FOUND)
-    message(STATUS "Go has been found, version: ${GO_VERSION}")
-endif()
+message(STATUS "Go has been found, version: ${GO_VERSION}")
 
 ###########################
 #
@@ -70,9 +66,7 @@ endif()
 #
 ###########################
 find_package(PythonInterp 3.5 REQUIRED)
-if(PYTHONINTERP_FOUND)
-    message(STATUS "Python has been found, version: ${PYTHON_VERSION_STRING}")
-endif()
+message(STATUS "Python has been found, version: ${PYTHON_VERSION_STRING}")
 
 ######################
 #
@@ -80,46 +74,12 @@ endif()
 #
 ######################
 if(BUILD_TESTS)
-    # Props to http://crascit.com/2015/07/25/cmake-gtest/
-    # Download and unpack googletest at configure time
-
-    if(MSVC) # VS2012 doesn't support correctly the tuples yet
-        add_definitions(/D _VARIADIC_MAX=10)
-    endif()
-
-    configure_file(tests/CMakeLists.txt
-                   googletest-download/CMakeLists.txt)
-    if(CMAKE_BUILD_TYPE MATCHES DEBUG) # Build gtest in release if so.
-        execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
-        execute_process(COMMAND ${CMAKE_COMMAND} --build .
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
-    else()
-        execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" -DCMAKE_BUILD_TYPE=Release .
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
-        execute_process(COMMAND ${CMAKE_COMMAND} --build . --config Release
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
-    endif()
-
-    # Prevent GoogleTest from overriding our compiler/linker options
-    # when building with Visual Studio
-    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-
-    # Add googletest directly to our build. This adds
-    # the following targets: gtest, gtest_main, gmock
-    # and gmock_main
-    add_subdirectory(${CMAKE_BINARY_DIR}/googletest-src
-                     ${CMAKE_BINARY_DIR}/googletest-build
-                     EXCLUDE_FROM_ALL)
-
-    add_definitions(-D _BUILD_TESTS)
+    include(GoogleTest)
 endif()
 
 ###
 ### End search dependecies
 #######################################
-
-
 
 #######################################
 ### Checking build version
